<resources>
    <string name="app_name">天气宝宝</string>
    <string name="title_activity_main">选择城市</string>
    <string name="city_manage">城市管理</string>

    <!-- toolbar -->
    <string name="toolbar_menu_settings">设置</string>
    <string name="toolbar_city_manage_edit">编辑</string>
    <string name="toolbar_city_manage_refresh">刷新</string>
    <string name="toolbar_city_manage_cancel">取消</string>
    <string name="toolbar_city_manage_confirm">确定</string>

    <!-- 温度单位 -->
    <string name="Centigrade">°C</string>
    <string name="Fahrenheit">°F</string>

    <!-- 空气质量 -->
    <string name="Atmosphere">空气质量</string>
    <string name="Atmosphere_AQI">污染指数</string>
    <string name="Atmosphere_PM10">PM10</string>
    <string name="Atmosphere_PM25">PM2.5</string>
    <string name="Atmosphere_NO2">NO₂</string>
    <string name="Atmosphere_SO2">SO₂</string>
    <string name="Atmosphere_CO">CO</string>
    <string name="Atmosphere_O3">O₃</string>

    <!-- 舒适度 -->
    <string name="ComfortDegree">舒适度</string>
    <string name="ComfortDegree_AirHumidity">空气湿度</string>
    <string name="ComfortDegree_SendibleTemp">体感温度</string>
    <string name="ComfortDegree_UltravioletIntensity">紫外线指数</string>
    <string name="ComfortDegree_Visibility">能见度</string>
    <string name="ComfortDegree_Pressure">大气压强</string>

    <!-- 日出日落 -->
    <string name="Sunlight">日出日落</string>
    <string name="Monthly">月出月落</string>
    <string name="Alternates">昼夜交替</string>

    <!-- 风向风力 -->
    <string name="Wind">风向风力</string>
    <string name="Wind_Direction">风向</string>
    <string name="Wind_Power">风力</string>

    <!-- 城市管理 -->
    <string name="title_activity_city_manage">城市管理</string>
    <string name="city_default">默认</string>
    <string name="city_setting_default">设为默认</string>
    <string name="title_activity_add_city">添加城市</string>
    <string name="input_city_name">搜索城市（中文/拼音）</string>
    <string name="recommend_city">推荐城市</string>
    <string name="more_city">更多城市</string>
    <string name="city_back">返回</string>
    <string name="no_matched_city">没有符合条件的城市</string>
    <string name="current_location_addresss">当前城市</string>
    <string name="toast_not_location">"不存在位置提供器的情况"</string>
    <string name="forecast_item_date_format">%s月%s日 %s</string>

    <string name="loading">加载中...</string>
    <string name="city_already_exists">城市（%1$s）已添加</string>
    <string name="no_location">没有定位信息.
        使用当前网络地址定位</string>
    <string name="city_already_exists_location">当前定位城市已添加</string>
    <string name="today_temp_air">空气</string>
    <string name="toolbar_menu_settings_update_interval">更新间隔</string>
    <string name="toolbar_menu_settings_temp_unit">温度单位</string>

    <!-- 更新时间间隔 -->
    <string name="update_interval_one">1 小时</string>
    <string name="update_interval_two">2 小时</string>
    <string name="update_interval_six">6  小时</string>
    <string name="update_interval_twelve">12  小时</string>
    <string name="Lifestyle">生活指数</string>
    <string name="weather_update_time">更新时间:%s</string>
    <string name="weather_publish_time">发布时间:%s</string>
    <string name="forecast_item_date_format_yesterday">昨天</string>
    <string name="forecast_item_date_format_today">今天</string>
    <string name="forecast_item_date_format_tomorrow">明天</string>
    <string name="time_slot_matinal">早晨</string>
    <string name="time_slot_morning">上午</string>
    <string name="time_slot_noonday">中午</string>
    <string name="time_slot_afternoon">下午</string>
    <string name="time_slot_at_nightfall">傍晚</string>
    <string name="time_slot_evening">晚上</string>
    <string name="time_slot_before_dawn">凌晨</string>
    <string name="time_slot_late_at_night">深夜</string>

    <string name="weather_app_widget_month_week">MM月dd日 EEEE</string>
</resources>
