<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_city_manage_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:title="@string/toolbar_city_manage_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_city_manage_confirm"
        android:icon="@drawable/ic_confirm"
        android:orderInCategory="100"
        android:title="@string/toolbar_city_manage_confirm"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_city_manage_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/toolbar_city_manage_refresh"
        app:showAsAction="always" />
</menu>