<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header_toolbar"
        style="@style/AppTheme.Toolbar"
        tools:ignore="MissingConstraints"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/search_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:hint="@string/input_city_name"
            android:singleLine="true"
            android:textColor="@color/colorTemp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_bar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/recommend_city"
            android:textColor="@color/colorTemp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorTips" />
    </LinearLayout>

    <GridView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="5dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:scrollbars="none"
        android:verticalSpacing="5dp"></GridView>

    <LinearLayout
        android:id="@+id/more_city_and_return_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/more_city_and_return_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/more_city"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>